kubectl yaml files/back-end-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: back-end-deployment 
  namespace: p3-space  
  labels: 
    app: back-end 

spec: # Specifications for the Deployment!
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector: 
    matchLabels: 
      app: e-commerce # has to match the template labels app. 
      tier: backend
      track: stable
  template: 
    metadata: 
      labels: 
        app: e-commerce
        tier: backend
        track: stable
    spec: # specification for the pod itself now!
      containers: 
        - name: back-end-deployment
          image: elrintowser/p3-backend
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
