kubectl yaml files/back-end-service-blue.yml
apiVersion: v1
kind: Service 
metadata:
  name: back-end-service-blue
  namespace: p3-space
  labels: 
    app: e-commerce
spec: 
  type: LoadBalancer
  sessionAffinity: ClientIP
  selector: 
    app: e-commerce
    color: blue
  ports: 
    - port: 5000 #back-end prot 
      targetPort: 5000 # this is for the container port 
      name: http
      protocol: TCP
