kubectl yaml files/back-end-service-green.yml
apiVersion: v1
kind: Service 
metadata:
  name: back-end-service-green
  namespace: p3-space
  labels: 
    app: e-commerce
spec:
  type: LoadBalancer
  selector: 
    app: e-commerce
    color: green
  ports: 
    - port: 5000 #back-end prot 
      targetPort: 5000 # this is for the container port 
      name: http
      protocol: TCP
