kubectl yaml files/back-end-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: back-end-service
  namespace: p3-space
  labels: 
    app: e-commerce
    tier: back-end 
spec: 
  type: LoadBalancer
  selector: 
    app: e-commerce
    tier: back-end 
  ports: 
    - port: 5000 #back-end prot 
      targetPort: 5000 # this is for the container port
