kubectl yaml files/db-all-constructs.yml
apiVersion: v1 # Source: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/
kind: Service
metadata:
  name: db
  namespace: p3-space
  labels:
    app: db
spec:
  ports:
  - port: 5432
    name: db-port
  clusterIP: None
  selector:
    app: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db #this was originally web, which matched line 35
  namespace: p3-space
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres
        ports:
        - containerPort: 5432
          name: db-port
