kubectl yaml files/front-end-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: front-end-service
  namespace: test
  labels: 
    app: e-commerce
    tier: frontend
spec:
  type: LoadBalancer
  selector: 
    app: e-commerce
    tier: frontend
  ports: 
    - port: 80  #front-end prot  
      targetPort: 3000 # this is for the container port
      protocol: "TCP"
