kubectl yaml files/sonar-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: sonarqube-manual-ingress 
  namespace: sonarqube
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/*"
          backend: 
            service: 
              name: sonarqube-sonarqube  
              port: 
                number: 9000
